Changes needed for the integration
Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

--- a/test/RenderingFramework/CMakeLists.txt
+++ b/test/RenderingFramework/CMakeLists.txt
@@ -22,12 +22,13 @@ set(_SOURCE_FILES
     testFramework.cpp
     UsdHelpers.h
     testContextCreator.cpp
-    TestFlags.h
+    testGlobalFlags.cpp
 )
 
 set(_HEADER_FILES
-    "${_FRAMEWORK_INCLUDE_DIR}/testFramework.h"
     "${_FRAMEWORK_INCLUDE_DIR}/testContextCreator.h"
+    "${_FRAMEWORK_INCLUDE_DIR}/testFramework.h"
+    "${_FRAMEWORK_INCLUDE_DIR}/testGlobalFlags.h"
 )
 
 if (IOS)
