Fix Delegate missing in public API
Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

--- a/test/RenderingFramework/CMakeLists.txt
+++ b/test/RenderingFramework/CMakeLists.txt
@@ -20,7 +20,6 @@ set(_FRAMEWORK_INCLUDE_DIR "${_HVT_INCLUDE_DIR}/hvt/testFramework")
 
 set(_SOURCE_FILES
     testFramework.cpp
-    UsdHelpers.h
     testContextCreator.cpp
     testGlobalFlags.cpp
 )
@@ -29,6 +28,7 @@ set(_HEADER_FILES
     "${_FRAMEWORK_INCLUDE_DIR}/testContextCreator.h"
     "${_FRAMEWORK_INCLUDE_DIR}/testFramework.h"
     "${_FRAMEWORK_INCLUDE_DIR}/testGlobalFlags.h"
+    "${_FRAMEWORK_INCLUDE_DIR}/testUsdHelpers.h"
 )
 
 if (IOS)
