Improve lib. dependency i.e., private vs. public for testFramework
Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

--- a/testFramework/framework/CMakeLists.txt
+++ b/testFramework/framework/CMakeLists.txt
@@ -100,9 +100,12 @@ endif()
 
 target_link_libraries(${_TARGET}
     PUBLIC
-        glfw
         ${glew_dep}
         hvt
+        hdx
+        usdImaging
+    PRIVATE
+        glfw
 )
 
 #---------------------------------------------------------------------------------------------------
