Enable virtual GPU for tests
Implements comprehensive virtual GPU support for running GPU-dependent tests in headless GitHub Actions Linux runners using Xvfb and Mesa software rendering.

- Added Xvfb (X Virtual Framebuffer) setup for headless OpenGL rendering
- Configured Mesa LLVMpipe software renderer with optimized settings
- Set up proper environment variables (DISPLAY, LIBGL_ALWAYS_SOFTWARE, GALLIUM_DRIVER)

- Fixed Linux RPATH configuration (`$ORIGIN/` vs macOS `@loader_path/`)
- Added `--disable-new-dtags` linker flags to force RPATH over RUNPATH
- Ensured automatic OpenUSD library discovery without manual LD_LIBRARY_PATH

- Created Linux-specific baseline images for all rendering tests
- Consolidated platform-specific baseline strategy using `_linux` suffix
- Added support for new tests: `TestFramePasses_ClearDepthBuffer` and `TestFramePasses_ClearColorBuffer`

- Updated `TestSearchEdges` and `TestSearchPoints` with Linux-specific expected results
- Fixed algorithmic differences between platforms in search functionality

- Limited test execution to Linux runners only (unlimited resources)
- Cleaned up redundant environment variable declarations
- Maintained platform-agnostic CMake presets

--- a/.github/workflows/ci-steps.yaml
+++ b/.github/workflows/ci-steps.yaml
@@ -30,6 +30,24 @@ jobs:
       if: runner.os == 'Linux'
       run: sudo apt-get update && sudo apt-get install -y libxmu-dev libxi-dev libgl-dev libxrandr-dev libxinerama-dev libxcursor-dev mono-complete
 
+    - name: Setup Virtual GPU for Testing (Linux only)
+      if: runner.os == 'Linux'
+      run: |
+        echo "=== Setting up Linux Software Rendering ==="
+        
+        # Set up Xvfb (virtual display)
+        sudo apt-get update
+        sudo apt-get install -y xvfb mesa-utils libgl1-mesa-dri
+        
+        # Start Xvfb
+        Xvfb :99 -screen 0 1024x768x24 &
+        export DISPLAY=:99
+        echo "DISPLAY=:99" >> $GITHUB_ENV
+        
+        # Force software rendering
+        echo "LIBGL_ALWAYS_SOFTWARE=1" >> $GITHUB_ENV
+        echo "GALLIUM_DRIVER=llvmpipe" >> $GITHUB_ENV
+
     - name: Install required dependencies (MacOS only)
       if: runner.os == 'macOS'
       run: brew install mono
@@ -50,13 +68,13 @@ jobs:
     - name: Build
       run: cmake --build --preset ${{ inputs.build_type }}
 
-    # Unit tests still failing using pixar USD.
-    # - name: Test
-    #   run: ctest --preset ${{ inputs.build_type }}
+    - name: Test 
+      if: runner.os == 'Linux'
+      run: ctest --preset ${{ inputs.build_type }} --output-on-failure
 
     - name: Upload vcpkg failure logs
       if: failure()
       uses: actions/upload-artifact@v4
       with:
-        name: vcpkg-build-logs
+        name: vcpkg-build-logs-${{ runner.os }}-${{ inputs.build_type }}
         path: externals/vcpkg/buildtrees
