OGSMOD-7668 - Add a generic depth bias task
Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

--- a/source/tasks/CMakeLists.txt
+++ b/source/tasks/CMakeLists.txt
@@ -24,6 +24,7 @@ set(_SOURCE_FILES
     "blurTask.cpp"
     "composeTask.cpp"
     "copyTask.cpp"
+    "depthBiasTask.cpp"
     "fxaaTask.cpp"
     "resources.cpp"
     "ssaoTask.cpp"
@@ -36,6 +37,7 @@ set(_HEADER_FILES
     "${_TASKS_INCLUDE_DIR}/blurTask.h"
     "${_TASKS_INCLUDE_DIR}/composeTask.h"
     "${_TASKS_INCLUDE_DIR}/copyTask.h"
+    "${_TASKS_INCLUDE_DIR}/depthBiasTask.h"
     "${_TASKS_INCLUDE_DIR}/fxaaTask.h"
     "${_TASKS_INCLUDE_DIR}/resources.h"
     "${_TASKS_INCLUDE_DIR}/ssaoTask.h"
