--- a/test/RenderingUtils/CMakeLists.txt
+++ b/test/RenderingUtils/CMakeLists.txt
@@ -25,7 +25,9 @@ set(_FILES
     "stb/stb_image_write.h"
 )
 
-add_library(${_TARGET} STATIC
+# Define the library.
+# NOTE: OBJECT is used so that the parent library contain the contents of this one.
+add_library(${_TARGET} OBJECT
     ${_FILES}
 )
 
