--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,9 +239,9 @@ if (MSVC)
     # Call function to check if Python debug libraries are available.
     check_python_debug_libraries (_PYTHON_DEBUG_AVAILABLE)
     if(_PYTHON_DEBUG_AVAILABLE)
-        # In debug builds, Boost's wrap_python.hpp will #undef _DEBUG when BOOST_DEBUG_PYTHON is not defined,
+        # In debug builds, wrap_python.hpp will #undef _DEBUG when BOOST_DEBUG_PYTHON is not defined,
         # and will then include pyconfig.h :
-        # https://github.com/boostorg/python/blob/boost-1.81.0/include/boost/python/detail/wrap_python.hpp#L23-L57
+        # https://github.com/PixarAnimationStudios/OpenUSD/blob/v25.08/pxr/external/boost/python/detail/wrap_python.hpp#L29-L52
         # pyconfig.h will then autolink the Python lib; however, since _DEBUG was #undef'd, it will try to
         # link against the release version of the Python lib, causing a linker error :
         # https://github.com/python/cpython/blob/v3.11.4/PC/pyconfig.h#L269-L286
