OGSMOD-8014 - Fix cmake module issue
Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ option(ENABLE_TESTS "Enable tests" ON)
 option(HVT_RELEASE_ONLY_VCPKG_DEPS "Use a release-optimized vcpkg base triplet" OFF)
 
 # Add the path to the CMake helpers and import them.
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 # Try to import from the environment variable only if OPENUSD_INSTALL_PATH isn’t already set
 if(NOT DEFINED OPENUSD_INSTALL_PATH AND DEFINED ENV{OPENUSD_INSTALL_PATH})
@@ -31,8 +31,8 @@ if(NOT DEFINED OPENUSD_INSTALL_PATH AND DEFINED ENV{OPENUSD_INSTALL_PATH})
     set(OPENUSD_INSTALL_PATH "$ENV{OPENUSD_INSTALL_PATH}" CACHE PATH "Path to local USD install")
 endif()
 
-# Includes various helpers.
-include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/Helpers.cmake")
+# Includes various hvt helpers.
+include(Helpers)
 
 # Setups and runs vcpkg.
 include(VcpkgSetup)
