Add new pipeline for tests - Will never run tests by default - Test pipeline required to be able to merge PR

--- a/.github/workflows/ci-steps.yaml
+++ b/.github/workflows/ci-steps.yaml
@@ -6,17 +6,28 @@ on:
       GH_PACKAGES_TOKEN:
         required: true
     inputs:
-      os:
-        required: true
+      runner:
+        required: false
         type: string
+        default: linux
+        description: 'Runner type (linux, windows, mac, gpu)'
       build_type:
-        required: true
+        required: false
         type: string
+        default: release
+      enable_tests:
+        required: false
+        type: boolean
+        default: false
+      pr_number:
+        required: false
+        type: string
+        description: 'PR number to checkout (optional)'
 
 jobs:
   build:
-    name: ${{ inputs.os }} - ${{ inputs.build_type }}
-    runs-on: ${{ inputs.os == 'ubuntu-24.04' && 'self-hosted' || inputs.os }}
+    name: ${{ inputs.runner }} - ${{ inputs.build_type }}
+    runs-on: ${{ inputs.runner == 'linux' && 'ubuntu-24.04' || inputs.runner == 'windows' && 'windows-2022' || inputs.runner == 'mac' && 'macos-14' || inputs.runner == 'gpu' && 'self-hosted' || 'ubuntu-24.04' }}
 
     steps:
     - name: Checkout repo
@@ -26,6 +37,7 @@ jobs:
         submodules: recursive
         fetch-depth: 0
         clean: true  # Clean untracked files if any
+        ref: ${{ inputs.pr_number && format('refs/pull/{0}/head', inputs.pr_number) || github.ref }}
 
     - name: Install required dependencies (Linux only)
       if: runner.os == 'Linux'
@@ -51,8 +63,8 @@ jobs:
     - name: Build
       run: cmake --build --preset ${{ inputs.build_type }}
 
-    - name: Test (GPU-enabled on Linux)
-      if: runner.os == 'Linux' && runner.environment == 'self-hosted'
+    - name: Test (GPU-enabled)
+      if: inputs.enable_tests && inputs.runner == 'gpu'
       run: |
         # Setup X11 display directly in test step
         if ! pgrep -f "X :99" > /dev/null; then
