--- a/.github/workflows/ci-full.yaml
+++ b/.github/workflows/ci-full.yaml
@@ -13,12 +13,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-24.04, macos-14, windows-2022]
+        runner: [linux, mac, windows]
         build_type: [debug, release]
 
     uses: ./.github/workflows/ci-steps.yaml
     with:
-      os: ${{ matrix.os }}
+      runner: ${{ matrix.runner }}
       build_type: ${{ matrix.build_type }}
     secrets:
       GH_PACKAGES_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
