Buildfix: header is now public.

--- a/source/engine/CMakeLists.txt
+++ b/source/engine/CMakeLists.txt
@@ -27,7 +27,6 @@ set(_SOURCE_FILES
     "lightingManager.cpp"
     "lightingManager.h"
     "renderBufferManager.cpp"
-    "renderBufferManager.h"
     "renderIndexProxy.cpp"
     "selectionHelper.cpp"
     "selectionHelper.h"
@@ -47,6 +46,7 @@ set(_HEADER_FILES
     "${_ENGINE_INCLUDE_DIR}/framePassUtils.h"
     "${_ENGINE_INCLUDE_DIR}/hgiInstance.h"
     "${_ENGINE_INCLUDE_DIR}/lightingSettingsProvider.h"
+    "${_ENGINE_INCLUDE_DIR}/renderBufferManager.h"
     "${_ENGINE_INCLUDE_DIR}/renderBufferSettingsProvider.h"
     "${_ENGINE_INCLUDE_DIR}/renderIndexProxy.h"
     "${_ENGINE_INCLUDE_DIR}/selectionSettingsProvider.h"
