Run the tests on Azure VM with GPU support (#69)
* Run the tests on Azure VM with GPU support

* Add new pipeline for tests
- Will never run tests by default
- Test pipeline required to be able to merge PR

* Run the test pipeline at every push (3-4min)

--- a/.github/workflows/ci-minimal.yaml
+++ b/.github/workflows/ci-minimal.yaml
@@ -1,7 +1,6 @@
 name: CI Minimal (Linux-Debug or choice)
 
 on:
-  pull_request:
   workflow_dispatch:
     inputs:
       platform:
@@ -22,9 +21,7 @@ jobs:
     name: ${{ github.event.inputs.platform || 'linux' }}-${{ github.event.inputs.build_type || 'debug' }}
     uses: ./.github/workflows/ci-steps.yaml
     with:
-      os: ${{ github.event.inputs.platform == 'linux' && 'ubuntu-24.04' || 
-        github.event.inputs.platform == 'windows' && 'windows-2022' || 
-        github.event.inputs.platform == 'mac' && 'macos-14' || 'ubuntu-24.04' }}
+      runner: ${{ github.event.inputs.platform || 'linux' }}
       build_type: ${{ github.event.inputs.build_type || 'debug' }}
     secrets:
       GH_PACKAGES_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
