--- a/source/tasks/CMakeLists.txt
+++ b/source/tasks/CMakeLists.txt
@@ -24,6 +24,7 @@ set(_SOURCE_FILES
     "blurTask.cpp"
     "composeTask.cpp"
     "copyTask.cpp"
+    "copyDepthToDepthMsaaTask.cpp"
     "depthBiasTask.cpp"
     "fxaaTask.cpp"
     "resources.cpp"
@@ -37,6 +38,7 @@ set(_HEADER_FILES
     "${_TASKS_INCLUDE_DIR}/blurTask.h"
     "${_TASKS_INCLUDE_DIR}/composeTask.h"
     "${_TASKS_INCLUDE_DIR}/copyTask.h"
+    "${_TASKS_INCLUDE_DIR}/copyDepthToDepthMsaaTask.h"
     "${_TASKS_INCLUDE_DIR}/depthBiasTask.h"
     "${_TASKS_INCLUDE_DIR}/fxaaTask.h"
     "${_TASKS_INCLUDE_DIR}/resources.h"
