Remove platform check in test cmake

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -66,12 +66,8 @@ add_executable(${_TARGET}
 # (where the single-configuration generators do not) invalidating/changing some predefined paths.
 get_cmake_property(_MULTI_CONFIG GENERATOR_IS_MULTI_CONFIG)
 
-if (UNIX)
-    # RPATH is set globally in root CMakeLists.txt for all UNIX platforms
-    # No additional per-target RPATH configuration needed
-elseif (WIN32)
-    # On the Windows platform, the safest approach is to copy libraries where are the executables.
-
+# On Windows, copy USD DLLs and plugins to the test executable directory
+if (WIN32)
     if(_MULTI_CONFIG)
         set(_CONFIGS ${CMAKE_CONFIGURATION_TYPES})
     else()
@@ -128,8 +124,6 @@ elseif (WIN32)
         endif()
 
     endforeach()
-else()
-    message(FATAL_ERROR "Platform not supported")
 endif()
 
 target_link_libraries(${_TARGET}
