Fix RPATH on linux to point in bin dir (#79)
* Fix RPATH on linux to point in bin dir
Since USD libraries are always in the same directory as the test executable,  works for all cases without needing multi-config logic

* Fix the RPATH in the main cmake

* Disentangle RPATH logic from APPLE logic

* Enable build RPATH

* Remove platform check in test cmake

* Add LD_LIBRARY_PATH for cleaner test output

Not mandatory for tests to pass, but suppresses USD plugin loading warnings.
USD plugins lack embedded RPATH and need help finding their dependencies.

--- a/.github/workflows/ci-steps.yaml
+++ b/.github/workflows/ci-steps.yaml
@@ -73,14 +73,14 @@ jobs:
         fi
         export DISPLAY=:99
         
-        # Set library path for USD dependencies
-        export LD_LIBRARY_PATH="$PWD/build/${{ inputs.build_type }}/vcpkg_installed/x64-linux-hvt/lib:$LD_LIBRARY_PATH"
-        
         # Verify GPU setup
         echo "GPU Info:"
         nvidia-smi --query-gpu=name,driver_version,memory.total --format=csv,noheader
         echo "OpenGL Renderer:"
         glxinfo | grep -E "(OpenGL version|OpenGL renderer)"
+        
+        # Set LD_LIBRARY_PATH for USD plugins (not mandatory for tests to pass, but suppresses plugin loading warnings)
+        export LD_LIBRARY_PATH=${{ github.workspace }}/out/build/${{ inputs.build_type }}/bin:$LD_LIBRARY_PATH
         
         # Run the tests
         ctest --preset ${{ inputs.build_type }} --output-on-failure
