--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,20 +41,33 @@ include(VcpkgSetup)
 # NOTE: We can't use PROJECT_IS_TOP_LEVEL here because the project is not yet defined.
 string(COMPARE EQUAL "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_SOURCE_DIR}" _HVT_PROJECT_IS_TOP_LEVEL)
 
-# Variables that need to be set prior to the project definition.
+# RPATH for Linux and macOS
 if (_HVT_PROJECT_IS_TOP_LEVEL AND UNIX)
-    set_if_not_defined(CMAKE_SKIP_BUILD_RPATH TRUE "")
+    # Set platform-specific RPATH syntax
+    if (APPLE)
+        set(_rpath "@loader_path/;@loader_path/../lib/")
+        set_if_not_defined(CMAKE_MACOSX_RPATH ON "")
+    else()
+        # Linux
+        set(_rpath "$ORIGIN:$ORIGIN/../lib")
+    endif()
+    
+    # Common RPATH settings for all UNIX platforms
+    set_if_not_defined(CMAKE_SKIP_BUILD_RPATH FALSE "")
     set_if_not_defined(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE "")
-    set_if_not_defined(CMAKE_INSTALL_RPATH "@loader_path/" "")
+    set_if_not_defined(CMAKE_INSTALL_RPATH "${_rpath}" "")
     set_if_not_defined(CMAKE_INSTALL_RPATH_USE_LINK_PATH FALSE "")
+endif()
 
-    # macOS specific (ignored on other platforms)
+# Apple-specific configuration
+if (_HVT_PROJECT_IS_TOP_LEVEL AND APPLE)
+    set_if_not_defined(CMAKE_OSX_DEPLOYMENT_TARGET "12.0" "Minimum OSX deployment version")
+    
+    # Validate architecture (universal builds not supported due to libjpeg-turbo)
     list(LENGTH CMAKE_OSX_ARCHITECTURES osx_arch_count)
     if(osx_arch_count GREATER 1)
         message(FATAL_ERROR "Universal builds are not supported because of libjpeg-turbo")
     endif()
-    set_if_not_defined(CMAKE_OSX_DEPLOYMENT_TARGET "12.0" "Minimum OSX deployment version")
-    set_if_not_defined(CMAKE_MACOSX_RPATH ON "")
 endif()
 
 # Enable only the typical build types.
