OGSMOD-8090: Enable Vulkan unit tests in Viewport Toolbox

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,6 +26,11 @@ find_package(GTest CONFIG REQUIRED)
 find_package(glfw3 CONFIG REQUIRED)
 find_package(glew CONFIG REQUIRED)
 
+# Only if Vulkan is enabled since SDL2 is required by the tests.
+if(HVT_ENABLE_VULKAN)
+    find_package(SDL2 CONFIG REQUIRED)
+endif()
+
 #---------------------------------------------------------------------------------------------------
 
 # This section lists all the Unit Test Framework libraries.
@@ -134,6 +139,14 @@ target_link_libraries(${_TARGET}
         hvt_test_framework
         hvt_test_utils
 )
+
+# Link Vulkan only if enabled.
+if(HVT_ENABLE_VULKAN)
+    target_link_libraries(${_TARGET}
+        PRIVATE
+            Vulkan::Vulkan
+    )
+endif()
 
 #---------------------------------------------------------------------------------------------------
 
